experiment_output/error_log/nondex-bireshpatel-selenium-java-automation.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environment.java:3: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlAttribute;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environment.java:4: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environment.java:5: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environment.java:9: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Parameter.java:3: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlAttribute;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Parameter.java:4: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Parameter.java:5: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlType;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Parameter.java:7: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Parameter.java:8: error: cannot find symbol
@XmlType(propOrder = {"key", "value"})
 ^
  symbol: class XmlType
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:3: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlAccessType;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:4: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlAccessorType;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:5: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:10: error: cannot find symbol
@XmlAccessorType(XmlAccessType.FIELD)
 ^
  symbol: class XmlAccessorType
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:11: error: cannot find symbol
@XmlRootElement(name = "Environments")
 ^
  symbol: class XmlRootElement
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/EnvironmentFactory.java:5: error: package javax.xml.bind does not exist
import javax.xml.bind.JAXBContext;
                     ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/EnvironmentFactory.java:6: error: package javax.xml.bind does not exist
import javax.xml.bind.Unmarshaller;
                     ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environment.java:16: error: cannot find symbol
    @XmlElement(name = "Parameter", type = Parameter.class)
     ^
  symbol:   class XmlElement
  location: class Environment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environment.java:25: error: cannot find symbol
    @XmlAttribute(name = "name")
     ^
  symbol:   class XmlAttribute
  location: class Environment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Parameter.java:18: error: cannot find symbol
    @XmlAttribute(name = "key")
     ^
  symbol:   class XmlAttribute
  location: class Parameter
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Parameter.java:27: error: cannot find symbol
    @XmlAttribute(name = "value")
     ^
  symbol:   class XmlAttribute
  location: class Parameter
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:10: error: cannot find symbol
@XmlAccessorType(XmlAccessType.FIELD)
                 ^
  symbol: variable XmlAccessType
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/Environments.java:14: error: cannot find symbol
    @XmlElement(name = "Environment", type = Environment.class)
     ^
  symbol:   class XmlElement
  location: class Environments
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/EnvironmentFactory.java:25: error: cannot find symbol
            JAXBContext jc = JAXBContext.newInstance(Environments.class);
            ^
  symbol:   class JAXBContext
  location: class EnvironmentFactory
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/EnvironmentFactory.java:25: error: cannot find symbol
            JAXBContext jc = JAXBContext.newInstance(Environments.class);
                             ^
  symbol:   variable JAXBContext
  location: class EnvironmentFactory
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/utils/config/EnvironmentFactory.java:35: error: cannot find symbol
            Unmarshaller unmarshaller = jc.createUnmarshaller();
            ^
  symbol:   class Unmarshaller
  location: class EnvironmentFactory
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task977/wd/NonDex-plugin-test/github.com/bireshpatel/selenium-java-automation/src/test/java/test/automation/page/common/BasePageSelenium.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 18s
